--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "postcss": "^8.4.49",
     "react": "^19.0.0",
@@ -15,7 +16,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
